# frece

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  FRECE_ENGINEERING_FIX_PROMPT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PHASES_CHECKLIST.md  README.md  THIRD_PARTY_LICENSES.md  frece.py  install.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
frece/: __init__.py  acquisition.py  banner.py  carver.py  classifier.py  cli.py  config.py  custody.py  errors.py  ewf.py  logging.py  metadata.py  parallel.py  partition.py  recovery.py  report.py  sandbox.py  scoring.py  timeline.py  trash.py
frece.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_acquisition.py  test_bug_fixes.py  test_carver.py  test_cli.py  test_config.py  test_custody.py  test_errors.py  test_integration.py  test_logging.py  test_metadata_scoring.py  test_new_features.py  test_parallel.py  test_partition.py  test_recovery.py  test_report_security.py  test_sandbox.py  test_trash.py
tests/__pycache__/: test_recovery.cpython-313-pytest-9.0.3.pyc.20824
tests/acceptance/: conftest.py  test_carver_e2e.py  test_cli_real_workflows.py  test_recovery_ext4.py  test_trash_image.py
