[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frece"
version = "2.0.0"
description = "FRECE: Forensic Recovery and Evidence Collection Engine - Production-grade digital forensics CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "DFIR Team" }
]

dependencies = [
    "python-magic>=0.4.27",
]

optional-dependencies.dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
]

[project.scripts]
frece = "frece.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["frece"]

[tool.frece]
max_ram_per_operation = 67108864
default_hash = "sha256"
case_root = "~/.frece/cases"
writeblock_required = true
chunk_size = 67108864
max_signature_length = 2048
max_video_size = 0

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
