[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frece"
version = "2.5.0"
description = "FRECE: Forensic Recovery and Evidence Carving Engine — Production-grade digital forensics CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-Proprietary" }
authors = [
    { name = "Nakum-hub" },
]
keywords = ["forensics", "digital-forensics", "file-recovery", "carving", "dfir", "incident-response"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "python-magic>=0.4.27",
    "yara-python>=4.5",
    "tqdm>=4.60",
    "cryptography>=40.0",
]

# System-level prerequisites (installed via the OS package manager, NOT pip):
#   - The Sleuth Kit (fls, icat, istat, mmls, fsstat) — required for filesystem
#     metadata recovery and inode-aware operations
#     (`frece recover`, `frece scan`, `frece fsstat`).
#   - GNU ddrescue — recommended for error-tolerant disk imaging
#     (`frece acquire`); FRECE falls back to a built-in copier when absent.
# Tests marked `acceptance` (see [tool.pytest.ini_options]) require The Sleuth
# Kit and are skipped automatically when these tools are not on PATH.

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
frece = "frece.cli:main"

[project.urls]
Homepage = "https://github.com/Nakum-hub/frece"
Repository = "https://github.com/Nakum-hub/frece"
Issues = "https://github.com/Nakum-hub/frece/issues"

[tool.hatch.build.targets.wheel]
packages = ["frece"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
markers = ["acceptance: requires installed Sleuth Kit tools"]
